# Mancala

./: .gitignore  Makefile.am  configure.ac
data/: Makefile.am
src/: Makefile.am  background.c  inputbox.c  juego.c  juego.h  mancala.c  mancala.h  netplay.c  netplay.h  ventana.c  ventana.h  zoom.c  zoom.h
