gamedatadir = $(pkgdatadir)/data

nobase_dist_gamedata_DATA = images/board.png \
	images/bookroom.png \
	images/mancala_window.png \
	images/player_1_background.png \
	images/player_1_highlight.png \
	images/player_2_background.png \
	images/player_2_highlight.png \
	images/grey_screen.png \
	images/waiting.png \
	images/stone1_0.png \
	images/stone1_1.png \
	images/stone1_2.png \
	images/stone1_3.png \
	images/stone1_4.png \
	images/stone1_5.png \
	images/stone1_6.png \
	images/stone1_7.png \
	images/stone2_0.png \
	images/stone2_1.png \
	images/stone2_2.png \
	images/stone2_3.png \
	images/stone2_4.png \
	images/stone2_5.png \
	images/stone2_6.png \
	images/stone2_7.png \
	images/stone3_0.png \
	images/stone3_1.png \
	images/stone3_2.png \
	images/stone3_3.png \
	images/stone3_4.png \
	images/stone3_5.png \
	images/stone3_6.png \
	images/stone3_7.png \
	images/stone4_0.png \
	images/stone4_1.png \
	images/stone4_2.png \
	images/stone4_3.png \
	images/stone4_4.png \
	images/stone4_5.png \
	images/stone4_6.png \
	images/stone4_7.png \
	images/stone5_0.png \
	images/stone5_1.png \
	images/stone5_2.png \
	images/stone5_3.png \
	images/stone5_4.png \
	images/stone5_5.png \
	images/stone5_6.png \
	images/stone5_7.png \
	images/flecha.png \
	images/window.png \
	images/tab.png \
	images/inputbox.png \
	images/chat.png \
	images/button-up.png \
	images/button-over.png \
	images/button-down.png \
	images/button-list-up.png \
	images/button-list-over.png \
	images/button-list-down.png \
	burbanksb.ttf \
	comicrazy.ttf

# Instalar los archivos .desktop e iconos
#applicationsdir = $(datadir)/applications
#applications_DATA = desktop/findfour.desktop

#icons16dir = $(datadir)/icons/hicolor/16x16/apps
#icons16_DATA = desktop/16x16/findfour.png

#icons32dir = $(datadir)/icons/hicolor/32x32/apps
#icons32_DATA = desktop/32x32/findfour.png

#icons48dir = $(datadir)/icons/hicolor/48x48/apps
#icons48_DATA = desktop/48x48/findfour.png

#icons64dir = $(datadir)/icons/hicolor/64x64/apps
#icons64_DATA = desktop/64x64/findfour.png

#icons128dir = $(datadir)/icons/hicolor/128x128/apps
#icons128_DATA = desktop/128x128/findfour.png

#icons256dir = $(datadir)/icons/hicolor/256x256/apps
#icons256_DATA = desktop/256x256/findfour.png

# touch the toplevel icon directory as required by the icon theme spec
#install-data-hook:
#	touch $(DESTDIR)$(datadir)/icons/hicolor

#EXTRA_DIST = \
#	desktop/findfour.desktop	\
#	desktop/16x16/findfour.png		\
#	desktop/32x32/findfour.png		\
#	desktop/48x48/findfour.png		\
#	desktop/64x64/findfour.png		\
#	desktop/128x128/findfour.png		\
#	desktop/256x256/findfour.png		\
#	findfour.ico

